# minisat-haskell-bindings

./: .gitignore  Makefile  MiniSat.hs  MiniSat.hsc  MiniSatRaw.hs  README  Sat.hs  SatImplicit.hs  TODO  TestMiniSat.hs  hsc-magic.h  minisat.cabal
