name:            minisat
version:         0.1
build-type:      Simple
cabal-version:   >= 1.6

library
  exposed-modules: MiniSat
  extensions:      ForeignFunctionInterface
  build-depends:   base >= 3 && < 5
  extra-libraries: minisat-c minisat z
  include-dirs:    .
  ghc-options:     -fno-warn-deprecated-flags
